# aquamarine-toolkit

./: Cargo.toml  README.md  proposal.md
aquamarine-toolkit-api/: Cargo.toml
aquamarine-toolkit-api/src/: lib.rs
src/: main.rs
src/app/: mod.rs  plugin_load.rs
src/daemon/: mod.rs
src/plugins/: browser.rs  mod.rs
src/protocol/: mod.rs
src/server/: mod.rs
