[package]
name = "aquamarine-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
pretty_env_logger = "0.4.0"
log = "0.4.16"
bincode = "1.3.3"
dirs = "4.0.0"
open = "2.1.1"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.aquamarine-toolkit-api]
path = "aquamarine-toolkit-api"