[package]
name = "aquamarine-toolkit-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dirs = "4.0.0"
serde_json = "1.0.79"
log = "0.4.16"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
